--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Another attempt to a TypeScript end-to-end type safe framework.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "esbuild --format=cjs --outfile=build.js build.ts",
+    "build": "node build && tsc",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,8 @@
   },
   "homepage": "https://github.com/cplepage/typescript-rpc#readme",
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "esbuild": "^0.17.3",
+    "typescript": "^4.9.4"
   }
 }
