--- a/examples/fullstacked/package.json
+++ b/examples/fullstacked/package.json
@@ -1,11 +1,13 @@
 {
+  "name": "typescript-rpc-fullstacked",
+  "version": "0.0.0",
   "scripts": {
     "start": "npx fullstacked watch",
     "test": "npx fullstacked test"
   },
   "dependencies": {
     "fullstacked": "^0.9.0",
-    "typescript-rpc": "^0.0.1"
+    "typescript-rpc": "^0.0.2"
   },
   "type": "module"
 }
