--- a/examples/ts-node-esbuild/package.json
+++ b/examples/ts-node-esbuild/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^18.11.18",
     "esbuild": "^0.17.3",
     "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "typescript-rpc": "^0.0.2"
   }
 }
