--- a/examples/ts-node-esbuild/package.json
+++ b/examples/ts-node-esbuild/package.json
@@ -8,6 +8,6 @@
     "esbuild": "^0.17.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "typescript-rpc": "^0.0.2"
+    "typescript-rpc": "file:../../typescript-rpc-0.0.2.tgz"
   }
 }
