--- a/examples/fullstacked/package.json
+++ b/examples/fullstacked/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "fullstacked": "^0.9.0",
-    "typescript-rpc": "file:../../typescript-rpc-0.0.2.tgz"
+    "typescript-rpc": "^0.0.3"
   },
   "type": "module"
 }
