--- a/examples/ts-node-esbuild/package.json
+++ b/examples/ts-node-esbuild/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "esbuild client.ts --outfile=client.js --bundle --format=cjs --minify",
+    "build": "esbuild client.ts --outfile=client.js --bundle --minify",
     "start": "npm run build && ts-node server"
   },
   "dependencies": {
@@ -8,6 +8,6 @@
     "esbuild": "^0.17.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "typescript-rpc": "file:../../typescript-rpc-0.0.2.tgz"
+    "typescript-rpc": "^0.0.3"
   }
 }
