--- a/examples/data-types/package.json
+++ b/examples/data-types/package.json
@@ -1,12 +1,10 @@
 {
   "scripts": {
     "build": "esbuild client.ts --outfile=client.js --bundle --minify & esbuild server.ts --outfile=server.mjs",
-    "start": "npm run build && node server.mjs",
-    "bench": "(sleep 2 && npx autocannon http://localhost:8000/hello) & npm start"
+    "start": "npm run build && node server.mjs"
   },
   "dependencies": {
     "@types/node": "^18.11.18",
-    "autocannon": "^7.10.0",
     "esbuild": "^0.17.5",
     "typescript-rpc": "^0.0.5"
   }
