--- a/examples/react-todo-app/package.json
+++ b/examples/react-todo-app/package.json
@@ -12,6 +12,6 @@
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "typescript-rpc": "file:../../typescript-rpc-0.0.6.tgz"
+    "typescript-rpc": "^0.0.8"
   }
 }
