--- a/examples/webpack-tsc-express/package.json
+++ b/examples/webpack-tsc-express/package.json
@@ -10,7 +10,7 @@
     "express": "^4.18.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
-    "typescript-rpc": "file:../../typescript-rpc-0.0.6.tgz",
+    "typescript-rpc": "^0.0.8",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
