--- a/examples/data-types/package.json
+++ b/examples/data-types/package.json
@@ -6,6 +6,6 @@
   "dependencies": {
     "@types/node": "^18.11.18",
     "esbuild": "^0.17.5",
-    "typescript-rpc": "^0.0.10"
+    "typescript-rpc": "file:../../typescript-rpc-0.0.16.tgz"
   }
 }
